Fix the spacing between the sidebar elements

--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+* {
+  padding: 0;
+  margin: 0;
+}
+
 .container {
   display: grid;
   grid-template: repeat(2, 1fr) / 1fr 3fr;
@@ -12,7 +17,13 @@
 .sidebar {
   display: grid;
   grid-row: 1 / 3;
-  grid-template-rows: repeat(3, 1fr);
+  grid-template-rows: auto auto 1fr;
+  gap: 50px;
+}
+
+.sidebar > h1,
+.sidebar li {
+  margin: 10px;
 }
 
 .main-content {
